feat: assignVars + esm/cjs dist

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./src//index.ts" type="module"></script>
+        <div id="root" class="src_testeroni__1ki9acx3">
+            <script src="src/index.ts" type="module"></script>
+        </div>
     </body>
 </html>
